Added functionality into StartOver button.

--- a/Bulls Eye/Base.lproj/Main.storyboard
+++ b/Bulls Eye/Base.lproj/Main.storyboard
@@ -30,6 +30,9 @@
                                 <rect key="frame" x="64" y="288" width="71" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Start Over"/>
+                                <connections>
+                                    <action selector="startOver" destination="BYZ-38-t0r" eventType="touchUpInside" id="Fo9-QA-PGU"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Score:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hrx-Pp-eAi">
                                 <rect key="frame" x="218" y="293" width="50" height="21"/>
